# solana-trading-bot

./: .dockerignore  .gitattributes  .gitignore  00-ARCHITECTURE.md  01-SSOT.md  02-CONFIG-AND-POLICY-SCHEMA.md  04-UX-PRODUCT-SPEC.md  05-DATA-MODEL.md  08-RUNBOOK-OPS.md  09-THREAT-SECURITY.md  10-AGENT-BUILD-PLAN.md  11-UI-SPEC.md  BUILD-STATUS-AND-ROADMAP.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GATE-A-PLAN.md  IMPLEMENTATION-MEMO.md  PULL_REQUEST_TEMPLATE.md  README.md  REAL_UI_BROWSER_TEST_AND_FULL_REVIEW_REPORT.md  START.bat  package.json
.claude/: launch.json
deploy/: compose.prod.example.yml
design/: soltrade-hero.html
docs/: 03-API-CONTRACT.md  06-BUILD-SPEC.md  07-TEST-PLAN.md  08-RUNBOOK-OPS.md  12-DESIGN-SYSTEM.md  ADR-0001-live-first-runtime-unification.md  APP_HANDBOOK.md  DESIGN_HANDOFF.md  EXISTING_STATE_REPORT.md  IMPROVEMENT_PROPOSALS.md  RESTRUCTURE_PLAN.md  UI_COMPONENTS.md  UX_BLUEPRINT.md
reports/: E2-BREAKGLASS-AUDIT-RETENTION-POLICY.md  E2-C3-0-REAL-SIGNING-LIBRARY-SELECTION.md  E2-C3-3-REAL-SIGNING-WIRING-DESIGN.md  E2-C4-ISOLATION-NO-KEY-LEAK-EVIDENCE.md  E2-C5-0-SIGN-ONLY-TESTNET-PROOF-DESIGN.md  E2-C5-1-SIGN-ONLY-TESTNET-SHAPED-PROOF-EVIDENCE.md  E2-C6-SIGNING-CLOSURE.md  E2-CUSTODY-OPS-POLICY.md  (+102 more)
services/analytics/: .gitignore  README.md  pyproject.toml
services/analytics/analytics/: __init__.py  backtest.py  leader_report.py  score_leaders.py
services/analytics/tests/: test_leader_report.py  test_score_leaders.py
services/hot-executor/: Cargo.toml  README.md
services/hot-executor/src/: main.rs  signer.rs  submit.rs
(+191 files in other folders)
