[package]
name = "soltrade-hot-executor"
version = "0.1.0"
edition = "2021"
description = "Latency-critical hot path: fee-payer-locked ed25519 signing (+ submit-prep) for Solana swaps."

[[bin]]
name = "hot-executor"
path = "src/main.rs"

[dependencies]
ed25519-dalek = "2"
bs58 = "0.5"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
